# learnopengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
chernoopengl/: CMakeLists.txt
chernoopengl/res/shaders/: Basic.shader
chernoopengl/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
first/: CMakeLists.txt  main.cpp
learnopengl/: CMakeLists.txt
learnopengl/shaders/: 3-3.fs
learnopengl/src/: Renderer.h  main.cpp  ref  shader_s.h
